src/tests/fixtures/enums/ExplicitlyNumericEnum.ts.expected
-----------------
INPUT
----------------- 
/** @gqlEnum */
enum Enum {
  VALID = 1,
  INVALID = 2,
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/enums/ExplicitlyNumericEnum.ts:3:3 - error: Expected `@gqlEnum` enum members to have string literal initializers. For example: `FOO = 'foo'`.

If you think Grats should be able to infer this enum value, please report an issue at https://github.com/captbaritone/grats/issues.

3   VALID = 1,
    ~~~~~~~~~
src/tests/fixtures/enums/ExplicitlyNumericEnum.ts:4:3 - error: Expected `@gqlEnum` enum members to have string literal initializers. For example: `FOO = 'foo'`.

If you think Grats should be able to infer this enum value, please report an issue at https://github.com/captbaritone/grats/issues.

4   INVALID = 2,
    ~~~~~~~~~~~
